<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_gyms">

    <fragment
        android:id="@+id/navigation_gyms"
        android:name="com.team4.boulderBuild.ui.gyms.GymsFragment"
        android:label="@string/title_gyms"
        tools:layout="@layout/fragment_gyms" >
        <action
            android:id="@+id/action_navigation_gyms_to_gymFormFragment2"
            app:destination="@id/gymFormFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.team4.boulderBuild.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.team4.boulderBuild.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/gymFormFragment"
        android:name="com.team4.boulderBuild.ui.gymform.GymFormFragment"
        android:label="GymFormFragment" >
        <argument
            android:name="id"
            android:defaultValue="-1" />
    </fragment>
</navigation>