<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.team4.boulderBuild.ui.gymform.GymFormViewModel" />
    </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_gym_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etGymName"
                android:inputType="text"
                android:text="@={viewmodel._name}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_gym_description"
            android:paddingTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etGymDescription"
                android:inputType="textMultiLine"
                android:text="@={viewmodel._description}"/>

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp">
            <!-- TODO: change raw lat, lon input into a map selector -->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_gym_lat"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etLocationLat"
                    android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_gym_lon"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etLocationLon"
                    android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- TODO: add some kind of photo taking and update-->

        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="20dp"
            android:id="@+id/btSubmit"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_gym_submit"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:onClick="@{() -> viewmodel.onClickSubmit()}"/>
    </LinearLayout>
</layout>